<resources>
    <string name="app_name">KemetApp</string>
    <string name="your_name">Your Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="nationality">Nationality</string>
    <string name="forget_password">Forget Password?</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="yourphone">YourPhone</string>
    <string-array name="ge">
        <item>Nationality</item>
        <item>Egypt</item>
        <item>America</item>
        <item>Algeria</item>
        <item>Angola</item>
        <item>Australia</item>
        <item>Bahrain</item>
        <item>Brazil</item>
        <item>China</item>
    </string-array>
    <string-array name="Day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>

    <string-array name="Month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item> March</item>
        <item>April</item>
        <item>May </item>
        <item> June</item>
        <item>July</item>
        <item> August</item>
        <item>September</item>
        <item> October</item>
        <item>November</item>
        <item> December</item>

    </string-array>

    <string-array name="Year">
        <item>Year</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
</resources>